--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -294,19 +294,19 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2022年11月28日~12月4日一周疫情简报：
+                                <p>2022年12月5日~11日一周疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周大幅上升（升高37%），病例总数超过169万例，平均每日增长1027例（上周为751例）；累计死亡13780人，最近一周新增死亡35人（上周为5人）。
+                                    <br><br>—  威斯康星州疫情增长速度较上周稍有下降（下降1%），病例总数超过170万例，平均每日增长1019例（上周为1027例）；累计死亡13819人，最近一周新增死亡39人（上周为35人）。
 
-                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+1389）、戴恩郡Madison（+768）、沃基肖郡Waukesha（+461）、Racine郡（+289）、Kenosha郡（+258）、布朗郡Green Bay（+239）、Rock郡（+235）、Marathon郡（+212）、Winnebago郡（+183）、Outagamie郡（+177）、Washington郡（+166）、Walworth郡（+159）、Fond du Lac郡（+150）、St. Croix郡（+139）、La Crosse郡（+131）、Wood郡（+113）、Sauk郡（+106），其他郡一周新增人数在100人以下。
+                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+1354）、戴恩郡Madison（+757）、沃基肖郡Waukesha（+449）、Racine郡（+326）、布朗郡Green Bay（+274）、Kenosha郡（+262）、Marathon郡（+227）、Winnebago郡（+212）、Rock郡（+208）、Washington郡（+181）、Outagamie郡（+177）、Fond du Lac郡（+163）、Walworth郡（+135）、Ozaukee郡（+118）、Sheboygan郡（+117）、Jefferson郡（+109）、Manitowoc郡（+104）、St. Croix郡（+104），其他郡一周新增人数在100人以下。
 
-                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周有所上升（升高23%），目前病例总数为164110例，周内新增715例，平均每日增长102例（上周为83例），一周平均检测阳性率为7.8%（高于上周的7.3%）。戴恩郡新冠住院病人数目由69人升至76人；重症病房新冠病人数由5人升至7人；累计死亡548例，新增2例（上周为2例）。
+                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周稍有上升（升高3%），目前病例总数为164847例，周内新增737例，平均每日增长105例（上周为102例），一周平均检测阳性率为7.3%（低于上周的7.8%）。戴恩郡新冠住院病人数目由76人降至63人；重症病房新冠病人数由7人降至6人；累计死亡549例，新增1例（上周为2例）。
 
-                                    <br><br>—  截止到12月4日，戴恩郡接种至少一剂疫苗者超过47.8万人，占总人口86.5%；完成接种疫苗者超过44.3万人，占总人口的80.2%；完成接种加强针数据已暂停更新。
+                                    <br><br>—  截止到12月11日，戴恩郡接种至少一剂疫苗者超过47.8万人，占总人口86.6%；完成接种疫苗者超过44.3万人，占总人口的80.2%；完成接种加强针数据已暂停更新。
 
-                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域如下：Mendota湖北岸（北至Northport Dr）、Monona湖北岸（北至E Washington Ave与Commercial Ave、东至Stoughton Rd）、戴恩郡北部的Waunakee Village、Beltline高速西段253-254号出口东侧（北至Old Sauk Rd、南至Mineral Point Rd、东至Gammon Rd）、戴恩郡东北部的Sun Prairie市等，详情请查看所附地图。
+                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域如下：Monona湖北岸（北至E Washington Ave与Commercial Ave、东至Starkweather Creek）、Beltline高速255至257号出口沿线附近、Mendota湖东岸（N Sherman Ave以西）、Monona湖南岸靠近Beltline高速沿线附近及南部一带（西至US-14、东至Upper Mud Lake）、Monona市以东的Pflaum Rd附近、戴恩郡南部的Oregon Village东部等，详情请查看所附地图。
 
-                                    <br><br>—  威斯康星大学麦迪逊分校中，最近一周内共新增阳性40例（上周为35例），包括学生32例（上周为27例，升高19%）、职工8例（上周为8例，无变化）。一周检测阳性率为学生13.2%（上周为13.0%），职工8.4%（上周为7.1%）。
+                                    <br><br>—  威斯康星大学麦迪逊分校中，最近一周内共新增阳性36例（上周为40例），包括学生28例（上周为32例，降低13%）、职工8例（上周为8例，无变化）。一周检测阳性率为学生13.7%（上周为13.2%），职工7.8%（上周为8.3%）。
 
                                     <br><br>（数据来源：威斯康星州卫生服务部、麦迪逊与戴恩郡公共卫生局、威大“新冠应对”信息平台；每周二发布于“麦迪讯”微信公众号：Madison_news）
 
