--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -250,7 +250,7 @@
                                 <a href="">Pandemic</a>
                             </div>
                             <h2 class="font-pt">新冠疫情信息汇总</h2>
-                            <p>Dec 26, 2022</p>
+                            <p>Jan 9, 2023</p>
                             <p>作者：阿特拉斯</p>
                         </div>
                     </div>
@@ -294,20 +294,18 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2022年12月19日~25日一周疫情简报：
+                                <p>2023年1月2日~8日一周疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周有所下降（降低16%），病例总数超过171万例，平均每日增长870例（上周为1035例）；累计死亡13884人，最近一周新增死亡33人（上周为32人）。
+                                    <br><br>—  威斯康星州疫情增长速度较上周有所下降（降低12%），病例总数为1729659例，平均每日增长730例（上周为829例）；累计死亡13977人，最近一周新增死亡61人（上周为32人）。
 
-                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+1198）、戴恩郡Madison（+688）、沃基肖郡Waukesha（+444）、Racine郡（+318）、Kenosha郡（+223）、布朗郡Green Bay（+213）、Washington郡（+207）、Winnebago郡（+199）、Rock郡（+192）、Outagamie郡（+159）、Marathon郡（+142）、Fond du Lac郡（+136）、Walworth郡（+114）、Dodge郡（+111）、Sheboygan郡（+111）、Ozaukee郡（+101），其他郡一周新增人数在100人以下。
+                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+1138）、戴恩郡Madison（+475）、沃基肖郡Waukesha（+314）、Racine郡（+284）、Kenosha郡（+218）、布朗郡Green Bay（+178）、Marathon郡（+150）、Rock郡（+140）、Washington郡（+137）、Outagamie郡（+126）、Winnebago郡（+114），其他郡一周新增人数在100人以下。
 
-                                    <br><br>—  截止到12月22日，戴恩郡（包括麦迪逊市）疫情增长速度较上周稍有下降（降低2%），目前病例总数为166173例，周内新增800例，平均每日增长114例（上周为117例），一周平均检测阳性率为9.1%（高于上周的8.1%）。戴恩郡新冠住院病人数目由70人降至68人；重症病房新冠病人数由5人升至6人；累计死亡559例，新增6例（上周为4例）。
+                                    <br><br>—  截止到1月8日，戴恩郡（包括麦迪逊市）疫情增长速度较上周有所上升（升高27%），目前病例总数为167408例，周内新增691例，平均每日增长99例（上周为78例），一周平均检测阳性率为7.8%（低于上周的8.8%）。戴恩郡新冠住院病人数目由63人降至61人；重症病房新冠病人数由6人降至4人；累计死亡562例，新增2例（上周为1例）。
 
-                                    <br><br>—  截止到12月22日，戴恩郡接种至少一剂疫苗者超过47.9万人，占总人口86.7%；完成接种疫苗者超过44.3万人，占总人口的80.2%。
+                                    <br><br>—  截止到1月8日，戴恩郡接种至少一剂疫苗者超过47.9万人，占总人口86.8%；完成接种疫苗者超过44.3万人，占总人口的80.2%。
 
-                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域如下：Middleton市东南部（University Ave以南、Beltline高速以东）、Beltline高速255至257号出口沿线附近、Verona市及周边区域、麦迪逊市东北部及周边区域（I-39以东北、至Sun Prairie市西南）、麦迪逊东北部的Warner Park以北部分区域，详情请查看所附地图。
-
-                                    <br><br>—  威斯康星大学麦迪逊分校中，最近一周内共新增阳性31例（上周为44例），包括学生22例（上周为28例，降低21%）、职工9例（上周为16例，降低44%）。一周检测阳性率为学生11.4%（低于上周的13.8%），职工9.9%（低于上周的14.0%）。
-
+                                    <br><br>—  自2022年12月23日起，不再进行校园PCR检测，威大新冠疫情信息平台终止更新。
+                                    
                                     <br><br>（数据来源：威斯康星州卫生服务部、麦迪逊与戴恩郡公共卫生局、威大“新冠应对”信息平台；每周二发布于“麦迪讯”微信公众号：Madison_news）
 
                                 <br><br><br><br>
