weekly covid update

--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -250,7 +250,7 @@
                                 <a href="">Pandemic</a>
                             </div>
                             <h2 class="font-pt">新冠疫情信息汇总</h2>
-                            <p>Jan 9, 2023</p>
+                            <p>Jan 18, 2023</p>
                             <p>作者：阿特拉斯</p>
                         </div>
                     </div>
@@ -294,15 +294,15 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2023年1月2日~8日一周疫情简报：
+                                <p>2023年1月9日~17日疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周有所下降（降低12%），病例总数为1729659例，平均每日增长730例（上周为829例）；累计死亡13977人，最近一周新增死亡61人（上周为32人）。
+                                    <br><br>—  威斯康星州疫情增长速度较上周有所下降（降低20%），病例总数为1734941例，平均每日增长587例（上周为730例）；累计死亡14057人，最近九日新增死亡80人（上周为61人）。
 
-                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+1138）、戴恩郡Madison（+475）、沃基肖郡Waukesha（+314）、Racine郡（+284）、Kenosha郡（+218）、布朗郡Green Bay（+178）、Marathon郡（+150）、Rock郡（+140）、Washington郡（+137）、Outagamie郡（+126）、Winnebago郡（+114），其他郡一周新增人数在100人以下。
+                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+904）、戴恩郡Madison（+339）、沃基肖郡Waukesha（+237）、Racine郡（+146）、布朗郡Green Bay（+114）、Marathon郡（+113）、Kenosha郡（+105）、Outagamie郡（+104）、Washington郡（+98）、Dodge郡（+94）、Rock郡（+93）、Winnebago郡（+92），其他郡一周新增人数在80人以下。
 
-                                    <br><br>—  截止到1月8日，戴恩郡（包括麦迪逊市）疫情增长速度较上周有所上升（升高27%），目前病例总数为167408例，周内新增691例，平均每日增长99例（上周为78例），一周平均检测阳性率为7.8%（低于上周的8.8%）。戴恩郡新冠住院病人数目由63人降至61人；重症病房新冠病人数由6人降至4人；累计死亡562例，新增2例（上周为1例）。
+                                    <br><br>—  截止到1月17日，戴恩郡（包括麦迪逊市）疫情增长速度较上周大幅下降（降低45%），目前病例总数为167893例，最近九日新增485例，平均每日增长54例（上周为99例），一周平均检测阳性率为6.3%（低于上周的7.8%）。戴恩郡新冠住院病人数目由61人降至55人；重症病房新冠病人数仍为4人；累计死亡565例，新增3例（上周为2例）。
 
-                                    <br><br>—  截止到1月8日，戴恩郡接种至少一剂疫苗者超过47.9万人，占总人口86.8%；完成接种疫苗者超过44.3万人，占总人口的80.2%。
+                                    <br><br>—  截止到1月17日，戴恩郡接种至少一剂疫苗者超过47.9万人，占总人口86.8%；完成接种疫苗者超过44.3万人，占总人口的80.3%。
 
                                     <br><br>—  自2022年12月23日起，不再进行校园PCR检测，威大新冠疫情信息平台终止更新。
                                     
