weekly covid update

--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -294,15 +294,15 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2023年1月9日~17日疫情简报：
+                                <p>2023年1月18日~22日疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周有所下降（降低20%），病例总数为1734941例，平均每日增长587例（上周为730例）；累计死亡14057人，最近九日新增死亡80人（上周为61人）。
+                                    <br><br>—  威斯康星州疫情增长速度较上周有所下降（降低14%），病例总数为1737459例，平均每日增长504例（上周为587例）；累计死亡14093人，最近五日新增死亡36人（之前九日为80人）。
 
-                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+904）、戴恩郡Madison（+339）、沃基肖郡Waukesha（+237）、Racine郡（+146）、布朗郡Green Bay（+114）、Marathon郡（+113）、Kenosha郡（+105）、Outagamie郡（+104）、Washington郡（+98）、Dodge郡（+94）、Rock郡（+93）、Winnebago郡（+92），其他郡一周新增人数在80人以下。
+                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+848）、戴恩郡Madison（+337）、沃基肖郡Waukesha（+228）、Racine郡（+129）、布朗郡Green Bay（+120）、Kenosha郡（+112）、Winnebago郡（+100）、Marathon郡（+97）、Fond du Lac郡（+88）、Washington郡（+87）、Rock郡（+83）、Outagamie郡（+78）、La Crosse郡（+78）、Wood郡（+65）、Ozaukee郡（+63），其他郡一周新增人数在60人以下。
 
-                                    <br><br>—  截止到1月17日，戴恩郡（包括麦迪逊市）疫情增长速度较上周大幅下降（降低45%），目前病例总数为167893例，最近九日新增485例，平均每日增长54例（上周为99例），一周平均检测阳性率为6.3%（低于上周的7.8%）。戴恩郡新冠住院病人数目由61人降至55人；重症病房新冠病人数仍为4人；累计死亡565例，新增3例（上周为2例）。
+                                    <br><br>—  截止到1月22日，戴恩郡（包括麦迪逊市）疫情增长速度较上周有所下降（降低12%），目前病例总数为168129例，最近五日新增236例，平均每日增长47例（上周为54例），一周平均检测阳性率为5.6%（低于上周的6.3%）。戴恩郡新冠住院病人数目由55人降至54人；重症病房新冠病人数由4人增至5人；累计死亡566例，新增1例（上周为3例）。
 
-                                    <br><br>—  截止到1月17日，戴恩郡接种至少一剂疫苗者超过47.9万人，占总人口86.8%；完成接种疫苗者超过44.3万人，占总人口的80.3%。
+                                    <br><br>—  截止到1月22日，戴恩郡接种至少一剂疫苗者超过47.9万人，占总人口86.9%；完成接种疫苗者超过44.3万人，占总人口的80.3%。
 
                                     <br><br>—  自2022年12月23日起，不再进行校园PCR检测，威大新冠疫情信息平台终止更新。
                                     
