weekly covid update

--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -250,7 +250,7 @@
                                 <a href="">Pandemic</a>
                             </div>
                             <h2 class="font-pt">新冠疫情信息汇总</h2>
-                            <p>Jan 18, 2023</p>
+                            <p>Jan 30, 2023</p>
                             <p>作者：阿特拉斯</p>
                         </div>
                     </div>
@@ -294,15 +294,15 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2023年1月18日~22日疫情简报：
+                                <p>2023年1月23日~29日疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周有所下降（降低14%），病例总数为1737459例，平均每日增长504例（上周为587例）；累计死亡14093人，最近五日新增死亡36人（之前九日为80人）。
+                                    <br><br>—  威斯康星州疫情增长速度与上周大致持平，病例总数为1740993例，平均每日增长505例（上周为504例）；累计死亡14144人，最近一周新增死亡51人（之前五日为36人）。
 
-                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+848）、戴恩郡Madison（+337）、沃基肖郡Waukesha（+228）、Racine郡（+129）、布朗郡Green Bay（+120）、Kenosha郡（+112）、Winnebago郡（+100）、Marathon郡（+97）、Fond du Lac郡（+88）、Washington郡（+87）、Rock郡（+83）、Outagamie郡（+78）、La Crosse郡（+78）、Wood郡（+65）、Ozaukee郡（+63），其他郡一周新增人数在60人以下。
+                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+749）、戴恩郡Madison（+349）、沃基肖郡Waukesha（+213）、Kenosha郡（+135）、Racine郡（+120）、布朗郡Green Bay（+119）、Winnebago郡（+103）、Marathon郡（+100）、Washington郡（+94）、La Crosse郡（+90）、Wood郡（+76）、St. Croix郡（+71）、Rock郡（+69）、Fond du Lac郡（+69）、Outagamie郡（+68），其他郡一周新增人数在60人以下。
 
-                                    <br><br>—  截止到1月22日，戴恩郡（包括麦迪逊市）疫情增长速度较上周有所下降（降低12%），目前病例总数为168129例，最近五日新增236例，平均每日增长47例（上周为54例），一周平均检测阳性率为5.6%（低于上周的6.3%）。戴恩郡新冠住院病人数目由55人降至54人；重症病房新冠病人数由4人增至5人；累计死亡566例，新增1例（上周为3例）。
+                                    <br><br>—  截止到1月29日，戴恩郡（包括麦迪逊市）疫情增长速度较上周稍有上升（升高6%），目前病例总数为168478例，最近一周新增349例，平均每日增长50例（上周为47例），一周平均检测阳性率为5.8%（稍高于上周的5.6%）。戴恩郡新冠住院病人数目由54人降至53人；重症病房新冠病人数由5人降至2人；累计死亡570例，新增4例（上周为1例）。
 
-                                    <br><br>—  截止到1月22日，戴恩郡接种至少一剂疫苗者超过47.9万人，占总人口86.9%；完成接种疫苗者超过44.3万人，占总人口的80.3%。
+                                    <br><br>—  截止到1月29日，戴恩郡接种至少一剂疫苗者超过47.9万人，占总人口86.9%；完成接种疫苗者超过44.3万人，占总人口的80.2%。
 
                                     <br><br>—  自2022年12月23日起，不再进行校园PCR检测，威大新冠疫情信息平台终止更新。
                                     
