weekly covid update

--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -250,7 +250,7 @@
                                 <a href="">Pandemic</a>
                             </div>
                             <h2 class="font-pt">新冠疫情信息汇总</h2>
-                            <p>Feb 6, 2023</p>
+                            <p>Feb 13, 2023</p>
                             <p>作者：阿特拉斯</p>
                         </div>
                     </div>
@@ -294,15 +294,15 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2023年1月30日~2月5日疫情简报：
+                                <p>2023年2月5日~12日疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周稍有下降（降低3%），病例总数为1744424例，平均每日增长490例（上周为505例）；累计死亡14171人，最近一周新增死亡27人（上周为51人）。
+                                    <br><br>—  威斯康星州疫情增长速度较上周稍有上升（升高4%），病例总数为1747995例，平均每日增长510例（上周为490例）；累计死亡14218人，最近一周新增死亡47人（上周为27人）。
 
-                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+667）、戴恩郡Madison（+331）、沃基肖郡Waukesha（+196）、布朗郡Green Bay（+126）、Rock郡（+124）、Racine郡（+121）、Marathon郡（+101）、Kenosha郡（+96）、Winnebago郡（+85）、La Crosse郡（+85）、Wood郡（+80）、Outagamie郡（+75）、Fond du Lac郡（+71）、Washington郡（+71）、Sheboygan郡（+70）、Eau Claire郡（+66），其他郡一周新增人数在60人以下。
+                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+638）、戴恩郡Madison（+378）、沃基肖郡Waukesha（+161）、布朗郡Green Bay（+134）、Kenosha郡（+126）、Winnebago郡（+125）、Racine郡（+116）、Rock郡（+95）、La Crosse郡（+92）、Outagamie郡（+89）、Marathon郡（+87）、Eau Claire郡（+85）、Washington郡（+77）、Wood郡（+66）、Fond du Lac郡（+61），其他郡一周新增人数在60人以下。
 
-                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周稍有下降（降低7%），目前病例总数为168802例，最近一周新增324例，平均每日增长46例（上周为50例），一周平均检测阳性率为5.7%（稍低于上周的5.8%）。戴恩郡新冠住院病人数目由53人升至54人；重症病房新冠病人数为2人；累计死亡570例，新增0例（上周为4例）。
+                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周有所上升（升高14%），目前病例总数为169171例，最近一周新增369例，平均每日增长53例（上周为46例），一周平均检测阳性率为6.4%（高于上周的5.7%）。戴恩郡新冠住院病人数目由54人降至52人；重症病房新冠病人数由2人升至4人；累计死亡574例，新增4例（上周为0例）。
 
-                                    <br><br>—  截止到2月5日，戴恩郡接种至少一剂疫苗者超过48.0万人，占总人口86.9%；完成接种疫苗者超过44.3万人，占总人口的80.2%。
+                                    <br><br>—  截止到2月12日，戴恩郡接种至少一剂疫苗者超过48.0万人，占总人口86.9%；完成接种疫苗者超过44.3万人，占总人口的80.3%；接种二价加强针人数占总人口的36.9%。
 
                                     <br><br>—  自2022年12月23日起，不再进行校园PCR检测，威大新冠疫情信息平台终止更新。
                                     
