weekly covid update

--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -250,7 +250,7 @@
                                 <a href="">Pandemic</a>
                             </div>
                             <h2 class="font-pt">新冠疫情信息汇总</h2>
-                            <p>Feb 13, 2023</p>
+                            <p>Feb 20, 2023</p>
                             <p>作者：阿特拉斯</p>
                         </div>
                     </div>
@@ -294,15 +294,15 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2023年2月5日~12日疫情简报：
+                                <p>2023年2月13日~19日疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周稍有上升（升高4%），病例总数为1747995例，平均每日增长510例（上周为490例）；累计死亡14218人，最近一周新增死亡47人（上周为27人）。
+                                    <br><br>—  威斯康星州疫情增长速度较上周稍有上升（升高1%），病例总数为1751600例，平均每日增长515例（上周为510例）；累计死亡14239人，最近一周新增死亡21人（上周为47人）。
 
-                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+638）、戴恩郡Madison（+378）、沃基肖郡Waukesha（+161）、布朗郡Green Bay（+134）、Kenosha郡（+126）、Winnebago郡（+125）、Racine郡（+116）、Rock郡（+95）、La Crosse郡（+92）、Outagamie郡（+89）、Marathon郡（+87）、Eau Claire郡（+85）、Washington郡（+77）、Wood郡（+66）、Fond du Lac郡（+61），其他郡一周新增人数在60人以下。
+                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+586）、戴恩郡Madison（+354）、沃基肖郡Waukesha（+179）、Marathon郡（+147）、布朗郡Green Bay（+144）、Racine郡（+126）、Winnebago郡（+122）、Kenosha郡（+102）、Outagamie郡（+91）、La Crosse郡（+85）、Fond du Lac郡（+79）、Eau Claire郡（+75）、Portage郡（+73）、Dodge郡（+71）、Rock郡（+69）、Wood郡（+67）、Washington郡（+67）、Sheboygan郡（+63）、St. Croix郡（+62），其他郡一周新增人数在60人以下。
 
-                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周有所上升（升高14%），目前病例总数为169171例，最近一周新增369例，平均每日增长53例（上周为46例），一周平均检测阳性率为6.4%（高于上周的5.7%）。戴恩郡新冠住院病人数目由54人降至52人；重症病房新冠病人数由2人升至4人；累计死亡574例，新增4例（上周为0例）。
+                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周稍有下降（降低5%），目前病例总数为169520例，最近一周新增349例，平均每日增长50例（上周为53例），一周平均检测阳性率为6.6%（高于上周的6.4%）。戴恩郡新冠住院病人数目由52人降至51人；重症病房新冠病人数由4人升至5人；累计死亡575例，新增1例（上周为4例）。
 
-                                    <br><br>—  截止到2月12日，戴恩郡接种至少一剂疫苗者超过48.0万人，占总人口86.9%；完成接种疫苗者超过44.3万人，占总人口的80.3%；接种二价加强针人数占总人口的36.9%。
+                                    <br><br>—  截止到2月19日，戴恩郡接种至少一剂疫苗者超过48.1万人，占总人口87.0%；完成接种疫苗者超过44.4万人，占总人口的80.5%；接种二价加强针人数占总人口的37.5%。
 
                                     <br><br>—  自2022年12月23日起，不再进行校园PCR检测，威大新冠疫情信息平台终止更新。
                                     
