weekly covid update

--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -294,19 +294,19 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2023年2月13日~19日疫情简报：
+                                <p>2023年2月20日~26日疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周稍有上升（升高1%），病例总数为1751600例，平均每日增长515例（上周为510例）；累计死亡14239人，最近一周新增死亡21人（上周为47人）。
+                                    <br><br>—  威斯康星州疫情增长速度较上周稍有下降（降低1%），病例总数为1755183例，平均每日增长512例（上周为515例）；累计死亡14272人，最近一周新增死亡33人（上周为21人）。
 
-                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+586）、戴恩郡Madison（+354）、沃基肖郡Waukesha（+179）、Marathon郡（+147）、布朗郡Green Bay（+144）、Racine郡（+126）、Winnebago郡（+122）、Kenosha郡（+102）、Outagamie郡（+91）、La Crosse郡（+85）、Fond du Lac郡（+79）、Eau Claire郡（+75）、Portage郡（+73）、Dodge郡（+71）、Rock郡（+69）、Wood郡（+67）、Washington郡（+67）、Sheboygan郡（+63）、St. Croix郡（+62），其他郡一周新增人数在60人以下。
+                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+610）、戴恩郡Madison（+355）、沃基肖郡Waukesha（+176）、Marathon郡（+134）、布朗郡Green Bay（+132）、Kenosha郡（+106）、Racine郡（+104）、Washington郡（+91）、Dodge郡（+87）、Outagamie郡（+82）、La Crosse郡（+82）、Winnebago郡（+80）、Wood郡（+76）、Rock郡（+76）、Eau Claire郡（+74）、Walworth郡（+66），其他郡一周新增人数在60人以下。
 
-                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周稍有下降（降低5%），目前病例总数为169520例，最近一周新增349例，平均每日增长50例（上周为53例），一周平均检测阳性率为6.6%（高于上周的6.4%）。戴恩郡新冠住院病人数目由52人降至51人；重症病房新冠病人数由4人升至5人；累计死亡575例，新增1例（上周为4例）。
+                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周稍有上升（升高1%），目前病例总数为169871例，最近一周新增351例，平均每日增长50例（上周为50例），一周平均检测阳性率为7.0%（高于上周的6.6%）。戴恩郡新冠住院病人数目由51人降至46人；重症病房新冠病人数由5人升至6人；累计死亡579例，新增4例（上周为1例）。
 
-                                    <br><br>—  截止到2月19日，戴恩郡接种至少一剂疫苗者超过48.1万人，占总人口87.0%；完成接种疫苗者超过44.4万人，占总人口的80.5%；接种二价加强针人数占总人口的37.5%。
+                                    <br><br>—  截止到2月26日，戴恩郡接种至少一剂疫苗者超过48.1万人，占总人口87.1%；完成接种疫苗者超过44.4万人，占总人口的80.5%；接种二价加强针人数占总人口的37.8%。
 
                                     <br><br>—  自2022年12月23日起，不再进行校园PCR检测，威大新冠疫情信息平台终止更新。
                                     
-                                    <br><br>（数据来源：威斯康星州卫生服务部、麦迪逊与戴恩郡公共卫生局、威大“新冠应对”信息平台；每周二发布于“麦迪讯”微信公众号：Madison_news）
+                                    <br><br>（数据来源：威斯康星州卫生服务部、麦迪逊与戴恩郡公共卫生局；每周二发布于“麦迪讯”微信公众号：Madison_news）
 
                                 <br><br><br><br>
                             </div>
